# docx-parser-converter

./: .gitignore  .readthedocs.yml  CLAUDE.md  IMAGE_PARSER_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  package-lock.json  python_output.html  python_output.txt  requirements.txt  setup.py  test_python_converter.py
docx_parser_converter_python/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  SPECIFICATION.md  STRUCTURE_PLAN.md  __init__.py  api.py  conftest.py  pyproject.toml
docx_parser_converter_python/converters/common/: numbering_tracker.py  style_resolver.py
docx_parser_converter_python/converters/html/: css_generator.py  html_converter.py  html_document.py  numbering_to_html.py  paragraph_to_html.py  run_to_html.py  table_to_html.py
docx_parser_converter_python/converters/text/: __init__.py  numbering_to_text.py  paragraph_to_text.py  run_to_text.py  table_to_text.py  text_converter.py
docx_parser_converter_python/core/: __init__.py  constants.py  docx_reader.py  exceptions.py  model_utils.py  xml_extractor.py
docx_parser_converter_python/docs/schemas/: README.md  document.xml.md  numbering.xml.md  styles.xml.md
docx_parser_converter_python/docx_parser_converter/: __init__.py
docx_parser_converter_python/docx_parser_converter/core/: __init__.py  docx_reader.py  xml_extractor.py
docx_parser_converter_python/docx_parser_converter/parsers/: mapper.py  utils.py
docx_parser_converter_python/models/: __init__.py  types.py
docx_parser_converter_python/models/common/: border.py  (+6 more)
docx_parser_converter_python/parsers/: __init__.py  mapper.py  utils.py
docx_parser_converter_python/scripts/: generate_fixture_outputs.py
docx_parser_converter_python/tests/: conftest.py
(+815 files in other folders)
