[project]
name = "docx-parser-converter"
version = "0.1.0"
description = "A library for converting DOCX files to HTML and plain text"
authors = [
    {name = "Omer Hayun", email = "omerha86@gmail.com"},
]
dependencies = [
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.400",
    "ruff>=0.8.0",
    "lxml-stubs>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.400",
    "ruff>=0.8.0",
    "lxml-stubs>=0.5.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
packages = ["core", "models", "parsers", "converters"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["core", "models", "parsers", "converters", "tests"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "models", "parsers", "converters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
